--- a/rag.ipynb
+++ b/rag.ipynb
@@ -224,38 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3ea66060-f289-4395-bde7-ce6efab6b142",
+   "execution_count": 12,
+   "id": "695a01bb-3350-4cb9-a8cf-cd91d8ca30ed",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEPRECATION: Loading egg at c:\\program files\\python311\\lib\\site-packages\\vboxapi-1.0-py3.11.egg is deprecated. pip 25.1 will enforce this behaviour change. A possible replacement is to use pip for package installation. Discussion can be found at https://github.com/pypa/pip/issues/12330\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Enter API key for OpenAI:  ········\n"
      ]
     }
    ],
-   "source": [
-    "pip install -qU \"langchain[openai]\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b0f5442d-d798-44ff-89b9-b237a604c6c2",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
@@ -265,13 +245,13 @@
     "\n",
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "llm = init_chat_model(\"gpt-4o-mini\", model_provider=\"openai\")"
+    "llm = init_chat_model(\"gpt-4o-mini\", model_provider=\"openai\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "99241a70-6867-4d28-a83b-76031ab9b2c0",
+   "execution_count": 15,
+   "id": "04cf3363-ebd0-487b-a0b7-10136cefe455",
    "metadata": {},
    "outputs": [
     {
@@ -293,169 +273,65 @@
     }
    ],
    "source": [
-    "pip install -qU langchain-pinecone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8f560bc4-a648-4e2d-985b-f203759f0271",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_pinecone import PineconeVectorStore\n",
-    "from pinecone import Pinecone\n",
-    "\n",
-    "#pc = Pinecone(api_key=...) \n",
-    "#index = pc.Index(index_name)\n",
-    "\n",
-    "#vector_store = PineconeVectorStore(embedding=embeddings, index=index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "77f837f5-55fe-4a66-b230-7b12655efb9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import bs4\n",
-    "from langchain import hub\n",
-    "from langchain_community.document_loaders import WebBaseLoader\n",
-    "from langchain_core.documents import Document\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "from langgraph.graph import START, StateGraph\n",
-    "from typing_extensions import List, TypedDict\n",
-    "\n",
-    "# Load and chunk contents of the blog\n",
-    "loader = WebBaseLoader(\n",
-    "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
-    "    bs_kwargs=dict(\n",
-    "        parse_only=bs4.SoupStrainer(\n",
-    "            class_=(\"post-content\", \"post-title\", \"post-header\")\n",
-    "        )\n",
-    "    ),\n",
-    ")\n",
-    "docs = loader.load()\n",
-    "\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "all_splits = text_splitter.split_documents(docs)\n",
-    "\n",
-    "# Index chunks\n",
-    "_ = vector_store.add_documents(documents=all_splits)\n",
-    "\n",
-    "# Define prompt for question-answering\n",
-    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
-    "\n",
-    "\n",
-    "# Define state for application\n",
-    "class State(TypedDict):\n",
-    "    question: str\n",
-    "    context: List[Document]\n",
-    "    answer: str\n",
-    "\n",
-    "\n",
-    "# Define application steps\n",
-    "def retrieve(state: State):\n",
-    "    retrieved_docs = vector_store.similarity_search(state[\"question\"])\n",
-    "    return {\"context\": retrieved_docs}\n",
-    "\n",
-    "\n",
-    "def generate(state: State):\n",
-    "    docs_content = \"\\n\\n\".join(doc.page_content for doc in state[\"context\"])\n",
-    "    messages = prompt.invoke({\"question\": state[\"question\"], \"context\": docs_content})\n",
-    "    response = llm.invoke(messages)\n",
-    "    return {\"answer\": response.content}\n",
-    "\n",
-    "\n",
-    "# Compile application and test\n",
-    "graph_builder = StateGraph(State).add_sequence([retrieve, generate])\n",
-    "graph_builder.add_edge(START, \"retrieve\")\n",
-    "graph = graph_builder.compile()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "20d1469e-95a4-4bfa-8f87-5789b334809e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<langchain_pinecone.vectorstores.PineconeVectorStore at 0x26ecb5de1d0>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vector_store"
+    "pip install -qU langchain-pinecone pinecone-notebooks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "05dc2207-654d-4b6e-9dd3-095e4d93ac1f",
+   "id": "62e94828-e82b-4328-b56b-6d9c34fbb7ee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Task decomposition is the process of breaking down a complex task into smaller, manageable sub-tasks to simplify execution. This can be accomplished using techniques like Chain of Thought (CoT) or Tree of Thoughts, which enhance reasoning by allowing models to think step by step. The approach can involve direct instructions, task-specific prompts, or human inputs to generate a structured plan.\n"
+      "Enter your Pinecone API key:  ········\n"
      ]
     }
    ],
    "source": [
-    "response = graph.invoke({\"question\": \"What is Task Decomposition?\"})\n",
-    "print(response[\"answer\"])"
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "from pinecone import Pinecone, ServerlessSpec\n",
+    "\n",
+    "if not os.getenv(\"PINECONE_API_KEY\"):\n",
+    "    os.environ[\"PINECONE_API_KEY\"] = getpass.getpass(\"Enter your Pinecone API key: \")\n",
+    "\n",
+    "pinecone_api_key = os.environ.get(\"PINECONE_API_KEY\")\n",
+    "\n",
+    "pc = Pinecone(api_key=pinecone_api_key)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c4d06057-ffb5-4393-9415-c079167525a1",
+   "id": "f6b563be-7d3b-45e7-b9be-71d9e2859534",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total characters: 43130\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import bs4\n",
-    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "import time\n",
     "\n",
-    "# Only keep post title, headers, and content from the full HTML.\n",
-    "bs4_strainer = bs4.SoupStrainer(class_=(\"post-title\", \"post-header\", \"post-content\"))\n",
-    "loader = WebBaseLoader(\n",
-    "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
-    "    bs_kwargs={\"parse_only\": bs4_strainer},\n",
-    ")\n",
-    "docs = loader.load()\n",
+    "index_name = \"arep-8-db\"  # change if desired\n",
     "\n",
-    "assert len(docs) == 1\n",
-    "print(f\"Total characters: {len(docs[0].page_content)}\")"
+    "\n",
+    "if index_name not in existing_indexes:\n",
+    "        name=index_name,\n",
+    "        dimension=3072,\n",
+    "        metric=\"cosine\",\n",
+    "        spec=ServerlessSpec(cloud=\"aws\", region=\"us-east-1\"),\n",
+    "    )\n",
+    "    while not pc.describe_index(index_name).status[\"ready\"]:\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "index = pc.Index(index_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c623f672-496e-4b93-af1e-c45e9583efe4",
+   "id": "0c053a3b-6dda-4f8c-a308-70d4dd2627be",
    "metadata": {},
    "outputs": [],
    "source": []
